add_library(detour
        DebugDraw.cpp DebugDraw.h
        DetourAlloc.cpp DetourAlloc.h
        DetourAssert.h
        DetourCommon.cpp DetourCommon.h
        DetourDebugDraw.cpp DetourDebugDraw.h
        DetourMath.h
        DetourNavMeshBuilder.cpp DetourNavMeshBuilder.h
        DetourNavMesh.cpp DetourNavMesh.h
        DetourNavMeshQuery.cpp DetourNavMeshQuery.h
        DetourNode.cpp DetourNode.h
        DetourPathCorridor.cpp DetourPathCorridor.h
        DetourStatus.h
        DetourTileCacheBuilder.cpp DetourTileCacheBuilder.h
        DetourTileCache.cpp DetourTileCache.h
        )
