add_library(recast
        ChunkyTriMesh.cpp ChunkyTriMesh.h
        RecastAlloc.cpp RecastAlloc.h
        RecastArea.cpp
        RecastAssert.h
        RecastContour.cpp
        Recast.cpp Recast.h
        RecastFilter.cpp
        RecastLayers.cpp
        RecastMesh.cpp
        RecastMeshDetail.cpp
        RecastRasterization.cpp
        RecastRegion.cpp
        )
